# EventCompass

./: .gitignore  LICENSE  README.md  io_manager.py  main.py  pyproject.toml  ui_main.py
.github/workflows/: main.yml
backend/: __init__.py  app.py  eventcompass.db  main.py  models.py  schemas.py  store.py
backend/routers/: events.py  items.py  members.py  system.py
backend/tests/: conftest.py  test_cases.md  test_materials.py  test_members.py  test_reset.py  test_schedules.py  test_todos.py
controllers/: __init__.py  event_controller.py  item_controller.py  member_controller.py
docs/: backend_design.md  spec.md
fastapi/: __init__.py  testclient.py
frontend/: .eslintrc.cjs  debug_schedule_block.txt  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/state/: DataProvider.tsx
frontend/src/storage/: db.ts
frontend/src/views/: MaterialsView.tsx  MembersView.tsx  Overview.tsx  ScheduleBoard.tsx  TodoList.tsx
frontend/src/views/__tests__/: ScheduleBoard.test.tsx  TodoList.test.tsx
pydantic/: __init__.py
sample_site/cyber_site/: package.json
sample_site/cyber_site/public/: index.html
sample_site/cyber_site/src/: index.js  style.css
sample_site/cyber_site/src/components/: footer.js  navigation.css  navigation.js
sample_site/cyber_site/src/views/: home.css  home.js  materials.css  materials.js
tests/: conftest.py  test_cases.md  test_materials.py  test_members.py  test_schedules.py
ty/: __init__.py  __main__.py
widgets/: gantt_view.py  tag_filter.py
