[project]
name = "eventcompass"
version = "0.1.0"
description = "EventCompass backend"
authors = [{ name = "EventCompass Team" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "httpx>=0.27.0",
  "pytest>=7.4",
  "ty>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
